# Helios

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Structure.md  docker-compose.yml  package-lock.json  test_ws.js
.github/workflows/: ci.yml
auth/: Cargo.toml
auth/src/: lib.rs
bench/: Cargo.toml
bench/benches/: crdt_bench.rs
bench/src/: lib.rs
crdt/: Cargo.toml
crdt/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Editor.tsx  Login.tsx
frontend/src/hooks/: useHelios.ts
frontend/src/lib/: ws.ts
network/: Cargo.toml
network/src/: lib.rs  plugin_manager.rs  version_history.rs
ot-reconciler/: Cargo.toml
ot-reconciler/src/: lib.rs
presence/: Cargo.toml
presence/src/: lib.rs
proto/: helios.fbs
server/: .env.example  Cargo.toml
server/migrations/: 20240101000000_create_operations_table.sql
server/src/: main.rs  plugin_manager.rs  version_history.rs
server/static/: index.html
server/tests/: integration.rs
storage/: Cargo.toml
storage/src/: lib.rs
sync/: Cargo.toml
sync/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
tests/: integration.rs
wasm-runtime/: Cargo.toml
wasm-runtime/src/: lib.rs
