[workspace]
resolver = "2"
members = [
    "crdt",
    "ot-reconciler",
    "network",
    "sync",
    "presence",
    "storage",
    "auth",
    "telemetry",
    "bench",
    "server",
    "wasm-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
flatbuffers = "23"
