[package]
name = "helios-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "helios-server"
path = "src/main.rs"

[dependencies]
helios-network = { path = "../network" }
helios-crdt = { path = "../crdt" }
helios-storage = { path = "../storage" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json", "macros", "uuid"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde_json = { workspace = true }
