[package]
name = "helios-wasm-runtime"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
helios-crdt = { path = "../crdt" }
helios-ot-reconciler = { path = "../ot-reconciler" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
